frontend/src/app/views/root-profile/root-profile.component.scss
/* ... */
/*new Design*/

.container {
    display: flex;
    flex-direction: column;
    margin: 42px 48px;
}

.container>.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.container>.header>h1 {
    width: 100%;
    color: #000;
    font-family: Poppins, serif;
    font-size: 32px;
    font-style: normal;
    font-weight: 600;
    line-height: 40px;
}

.tokenId {
    display: flex;
    white-space: nowrap;
    column-gap: 6px;
    color: var(--color-grey-5, #848fa9);
    text-align: right;
    font-family: Inter, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.tokenId>strong {
    color: var(--color-grey-5, #848fa9);
    text-align: right;
    font-family: Inter, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
}

.actions-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

:host ::ng-deep .p-select {
    width: 400px;
    border-radius: 8px;
    border: 1px solid var(--color-grey-3);
    background: #fff;
}

:host ::ng-deep .p-select-overlay,
.p-select-list-container {
    border-radius: 8px;
    border: 1px solid var(--color-grey-3);
    background: #fff;
    margin-top: 4px;
    box-shadow: 0 0 1px 0 #000;
}

.dropdown-label {
    color: var(--color-grey-5);
    font-family: Inter, serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
    margin-right: 10px;
}

.dropdown-item {
    color: var(--color-grey-black-2);
    font-family: Inter, serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
}

:host ::ng-deep .p-dialog .p-dialog-footer button {
    margin-right: 16px;
}

.color-grey-6 {
    color: var(--color-grey-5, #848fa9);
}

.disabled-color {
    fill: var(--color-grey-5, #848FA9) !important;
    color: var(--color-grey-5, #848FA9) !important;
    cursor: not-allowed !important;
}

button[disabled] {
    background-color: var(--color-grey-2) !important;
    color: var(--color-grey-4) !important;
    cursor: not-allowed !important;
}

.primary-color {
    fill: var(--color-primary, #0031ff);
    color: var(--color-primary, #0031ff);
}

:host ::ng-deep .p-dialog {
    width: 720px;
    border-radius: 16px !important;
}

:host ::ng-deep .p-dialog-header {
    padding: 32px;
    border-radius: 16px 16px 0 0;
}

:host ::ng-deep .p-dialog-footer {
    padding: 32px;
    border-radius: 0 0 16px 16px;
}

.not-allowed-cursor {
    cursor: not-allowed !important;
}

.search-input {
    width: 400px;
    height: 40px;
    border-radius: 8px;
    border: 1px solid var(--color-grey-3, #e1e7ef);
    background: var(--color-grey-white, #fff);
}

.loading {
    background: #fff;
    position: absolute;
    z-index: 99;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-items: center;
    justify-content: center;
    align-content: center;
}

:host ::ng-deep .topic-id-field .p-select {
    width: 200px;
    border-radius: 8px;
    border: 1px solid var(--color-grey-3);
    background: #fff;
}

:host ::ng-deep.p-select {
    width: 100px;
    border-radius: 8px;
    border: 1px solid var(--color-grey-3);
    background: #fff;
}

.user-info-container {
    margin-top: 24px;
    display: flex;
    flex-direction: column;
    grid-row-gap: 16px;
    row-gap: 16px;
    background: #FFFFFF;
    box-shadow: 0px 4px 8px 0px #00000014;
    padding: 24px;
    border-radius: 8px;

    .item-header {
        font-family: Inter, sans-serif;
        font-size: 16px;
        font-weight: 600;
        line-height: 32px;
        text-align: left;
        margin-top: 16px;

        &:first-child {
            margin-top: 0px;
        }
    }

    .item {
        display: flex;
        column-gap: 15px;
        align-items: center;

        span {
            color: var(--color-grey-5, #848fa9);
        }

        div,
        .value-text {
            color: var(--color-grey-black-1, #181818);
        }

        span,
        .value-text {
            width: 200px;
            font-family: Inter, sans-serif;
            font-size: 14px;
            font-style: normal;
            font-weight: 500;
            line-height: normal;
            white-space: nowrap;
        }

        .view-document-button {
            cursor: pointer;
            display: flex;
            column-gap: 8px;
            height: 28px;
            padding: 6px 16px;
            align-items: center;
            border-radius: 6px;
            border: 1px solid var(--color-secondary);

            span {
                width: min-content;
                color: var(--color-primary);
            }
        }
    }
}

.finish-setup-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20vh;
}

.finish-setup-form-container {
    width: 100%;
    max-width: 700px;
    padding: 24px;
    border-radius: 8px;
    border: 1px solid var(--color-grey-3, #e1e7ef);
    background: var(--color-grey-white, #fff);
}

.finish-setup-title {
    display: flex;
    width: 100%;
    margin-bottom: 32px;
    justify-content: center;
    color: var(--text-color);
    font-family: Poppins, sans-serif;
    font-size: 32px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

.input-field-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 24px;
}

.form-label {
    color: #181818;
    font-family: Inter, sans-serif;
    font-size: 12px;
    font-style: normal;
    font-weight: 500;
}

.dropdown-container {
    display: flex;
}

.row-btns {
    display: flex;
    width: 100%;
    gap: 12px;

    &>* {
        flex-grow: 1;
    }
}

mat-radio-button {
    display: block;
    height: 30px;
}

*[active-field="false"] {
    opacity: 0.6;
    pointer-events: none;
}
/* ... */

